--- a/src/main/resources/templates/logout.html
+++ b/src/main/resources/templates/logout.html
@@ -7,7 +7,7 @@
 <body>
 <div th:fragment="logoutForm">
     <form th:action="@{/logout}" method="post">
-        <input type="submit" value="logout">
+        <input type="submit" value="Logout">
     </form>
 </div>
 </body>
