--- a/src/main/resources/templates/admin-createUser.html
+++ b/src/main/resources/templates/admin-createUser.html
@@ -6,14 +6,28 @@
 </head>
 <body>
 <h1>Create User</h1>
-<form th:action="@{/admin/add}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="username" required>
-    <br><br>
+<form th:action="@{/admin/add}" th:method="post" th:object="${user}">
+    <label for="firstname">Firstname:</label>
+    <input type="text" th:field="*{firstname}" id="firstname" required><br><br>
+
+    <label for="lastname">Lastname:</label>
+    <input type="text" th:field="*{lastname}" id="lastname" required><br><br>
+
+    <label for="age">Age:</label>
+    <input type="number" th:field="*{age}" id="age" required><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" th:field="*{email}" id="email" required><br><br>
 
     <label for="password">Password:</label>
-    <input type="password" id="password" name="password" required>
-    <br><br>
+    <input type="password" th:field="*{password}" id="password" required><br><br>
+
+    <label>Roles:</label>
+    <div th:each="role : ${allRoles}">
+        <input type="checkbox" th:field="*{roles}" th:value="${role.id}">
+        <label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+    </div>
+    <br>
 
     <button type="submit">Create User</button>
 </form>
