--- a/src/main/resources/templates/admin-updateUser.html
+++ b/src/main/resources/templates/admin-updateUser.html
@@ -8,10 +8,29 @@
 <h1>Edit User</h1>
 <form th:action="@{/admin/update}" th:method="post" th:object="${user}">
     <input type="hidden" th:field="*{id}">
-    <label for="username">Username:</label>
-    <input type="text" id="username" th:field="*{username}"><br>
+
+    <label for="firstname">Firstname:</label>
+    <input type="text" id="firstname" th:field="*{firstname}"><br><br>
+
+    <label for="lastname">Lastname:</label>
+    <input type="text" id="lastname" th:field="*{lastname}"><br><br>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" th:field="*{age}"><br><br>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" th:field="*{email}"><br><br>
+
     <label for="password">Password:</label>
-    <input type="password" id="password" th:field="*{password}"><br>
+    <input type="password" id="password" th:field="*{password}"><br><br>
+
+    <label>Roles:</label>
+    <div th:each="role : ${allRoles}">
+        <input type="checkbox" th:field="*{roles}" th:value="${role.id}">
+        <label th:for="${#ids.prev('roles')}" th:text="${role}"></label>
+    </div>
+    <br>
+
     <button type="submit">Update User</button>
 </form>
 <br><br>
