--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,7 +10,10 @@
     <thead>
     <tr>
         <th>ID</th>
-        <th>Username</th>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        <th>Age</th>
+        <th>Email</th>
         <th>Password</th>
         <th>Roles</th>
     </tr>
@@ -18,7 +21,10 @@
     <tbody>
     <tr th:each="user : ${users}">
         <td th:text="${user.id}"></td>
-        <td th:text="${user.username}"></td>
+        <td th:text="${user.firstname}"></td>
+        <td th:text="${user.lastname}"></td>
+        <td th:text="${user.age}"></td>
+        <td th:text="${user.email}"></td>
         <td th:text="${user.password}"></td>
         <td th:text="${user.roles}"></td>
         <td>
